--- a/public/index.html
+++ b/public/index.html
@@ -1220,6 +1220,11 @@ So let’s take our little factorial example see if we can calculate the factori
 
 
 
+<section>
+<a href="http://stackoverflow.com/users/453261/dave"><img src="http://stackoverflow.com/users/flair/453261.png" width="208" height="58" alt="profile for dave at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for dave at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
+</section>
+
+
   
 </aside>
 
