--- a/public/index.html
+++ b/public/index.html
@@ -1142,7 +1142,12 @@ So let’s take our little factorial example see if we can calculate the factori
 </div>
 <aside class="sidebar">
   
-    <section>
+    
+<section>
+  <h1>About Me</h1>
+  <p>life-long learner, developer, like to travel</p>
+    </section>
+<section>
   <h1>Recent Posts</h1>
   <ul id="recent_posts">
     
