--- a/public/index.html
+++ b/public/index.html
@@ -1145,7 +1145,7 @@ So let’s take our little factorial example see if we can calculate the factori
     
 <section>
   <h1>About Me</h1>
-  <p>life-long learner, developer, like to travel</p>
+  <p>david m. johnson is a life-long learner, developer, traveler, almost paleo, amateur theologian and chicagoan</p>
     </section>
 <section>
   <h1>Recent Posts</h1>
